kubernetes/apps/argocd/cmp-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: var-substitution-cmp
          command: [/var/run/argocd/argocd-cmp-server]
          image: alpine/k8s:1.30.0
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: plugin.yaml
              name: var-substitution-cmp
            - mountPath: /tmp
              name: cmp-tmp
      volumes:
        - secret:
            secretName: var-substitution-cmp
          name: var-substitution-cmp
        - emptyDir: {}
          name: cmp-tmp
