kubernetes/apps/argocd/resource-requests-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
